--- a/HelpdeskKit/Test.xaml
+++ b/HelpdeskKit/Test.xaml
@@ -1,27 +1,27 @@
 ﻿<Window x:Class="HelpdeskKit.Test"
-		xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		mc:Ignorable="d"
-		Height="350" Width="430"
-		ResizeMode="NoResize"
-		TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-		Background="{DynamicResource MaterialDesignPaper}"
-		TextElement.FontWeight="Medium"
-		TextElement.FontSize="14"
-		Title="Test"
-        
-		FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        Height="350" Width="430"
+        ResizeMode="NoResize"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.FontWeight="Medium"
+        TextElement.FontSize="14"
+        Title="Test"
+
+        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
     <materialDesign:DialogHost>
         <materialDesign:DrawerHost IsLeftDrawerOpen="{Binding ElementName=MenuToggleButton, Path=IsChecked}">
             <materialDesign:DrawerHost.LeftDrawerContent>
                 <DockPanel MinWidth="150">
-                    <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" 
-                                    DockPanel.Dock="Top"
-                                    HorizontalAlignment="Right" Margin="16"
-                                    IsChecked="{Binding ElementName=MenuToggleButton, Path=IsChecked, Mode=TwoWay}"/>
+                    <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}"
+                                  DockPanel.Dock="Top"
+                                  HorizontalAlignment="Right" Margin="16"
+                                  IsChecked="{Binding ElementName=MenuToggleButton, Path=IsChecked, Mode=TwoWay}" />
                     <ListBox x:Name="LeftDrawerListBox" DockPanel.Dock="Bottom">
                         <ListBoxItem>item 1</ListBoxItem>
                         <ListBoxItem>item 2</ListBoxItem>
@@ -34,28 +34,28 @@
                 </DockPanel>
             </materialDesign:DrawerHost.LeftDrawerContent>
             <DockPanel>
-                <materialDesign:ColorZone 
-                    Padding="10" 
+                <materialDesign:ColorZone
+                    Padding="10"
                     materialDesign:ShadowAssist.ShadowDepth="Depth2"
-                    Mode="PrimaryMid" 
+                    Mode="PrimaryMid"
                     DockPanel.Dock="Top">
                     <DockPanel>
-                        <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" 
+                        <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}"
                                       IsChecked="False"
-                                        x:Name="MenuToggleButton"
-                                      DockPanel.Dock="Left"/>
-                        <Button Width="120" DockPanel.Dock="Right"></Button>
+                                      x:Name="MenuToggleButton"
+                                      DockPanel.Dock="Left" />
+                        <Button Width="120" DockPanel.Dock="Right" />
                     </DockPanel>
 
-                    
 
                 </materialDesign:ColorZone>
 
-                <TextBlock DockPanel.Dock="Bottom" Grid.Row="1" Text="{Binding ElementName=LeftDrawerListBox, Path=SelectedValue}"/>
+                <TextBlock DockPanel.Dock="Bottom" Grid.Row="1"
+                           Text="{Binding ElementName=LeftDrawerListBox, Path=SelectedValue}" />
             </DockPanel>
-            
+
         </materialDesign:DrawerHost>
     </materialDesign:DialogHost>
-    
-   
+
+
 </Window>
