--- a/HelpdeskKit/Views/HelpdeskKitView.xaml
+++ b/HelpdeskKit/Views/HelpdeskKitView.xaml
@@ -1,42 +1,42 @@
 ﻿<Window x:Class="HelpdeskKit.HelpdeskKitView"
-		xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:local="clr-namespace:HelpdeskKit.Views"
-		xmlns:viewModels="clr-namespace:HelpdeskKit.ViewModels"
-		mc:Ignorable="d"
-		Height="410" Width="430"
-		ResizeMode="NoResize"
-		TextElement.Foreground="{StaticResource MaterialDesignBody}"
-		Background="{StaticResource MaterialDesignPaper}"
-		TextElement.FontWeight="Normal"
-		TextElement.FontSize="13.5"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:HelpdeskKit.Views"
+        xmlns:viewModels="clr-namespace:HelpdeskKit.ViewModels"
+        mc:Ignorable="d"
+        Height="410" Width="430"
+        ResizeMode="NoResize"
+        TextElement.Foreground="{StaticResource MaterialDesignBody}"
+        Background="{StaticResource MaterialDesignPaper}"
+        TextElement.FontWeight="Normal"
+        TextElement.FontSize="13.5"
         Title="Helpdesk Kit"
         WindowStartupLocation="CenterScreen"
-		FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
+        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
     <Window.Resources>
-        <local:InverseBooleanConverter x:Key="InverseBool"/>
+        <local:InverseBooleanConverter x:Key="InverseBool" />
     </Window.Resources>
     <Window.DataContext>
-        <viewModels:HelpdeskKitViewModel/>
+        <viewModels:HelpdeskKitViewModel />
     </Window.DataContext>
-    <materialDesign:DialogHost DialogContent="{Binding CurrentDialogContent}" 
-                               IsOpen="{Binding Authenticated, Converter={StaticResource InverseBool}}">
+    <materialDesign:DialogHost DialogContent="{Binding DialogContent}"
+                               IsOpen="{Binding ShowDialog}">
         <materialDesign:DrawerHost IsLeftDrawerOpen="{Binding ElementName=MenuToggleButton, Path=IsChecked}">
             <materialDesign:DrawerHost.LeftDrawerContent>
                 <DockPanel MinWidth="150">
-                    <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" 
-                                    Foreground="{StaticResource PrimaryHueMidBrush}"
-                                    DockPanel.Dock="Top"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Top"
-                                    Margin="3"
-                                    IsChecked="{Binding ElementName=MenuToggleButton, Path=IsChecked, Mode=TwoWay}" />
-                    <ListBox x:Name="MenuItemListBox" 
-                             Margin="0 16 0 16" 
-                             SelectedIndex="0"                         
+                    <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}"
+                                  Foreground="{StaticResource PrimaryHueMidBrush}"
+                                  DockPanel.Dock="Top"
+                                  HorizontalAlignment="Right"
+                                  VerticalAlignment="Top"
+                                  Margin="3"
+                                  IsChecked="{Binding ElementName=MenuToggleButton, Path=IsChecked, Mode=TwoWay}" />
+                    <ListBox x:Name="MenuItemListBox"
+                             Margin="0 16 0 16"
+                             SelectedIndex="0"
                              ItemsSource="{Binding MenuItems}"
                              HorizontalAlignment="Center"
                              PreviewMouseLeftButtonUp="MenuItemListBox_PreviewMouseLeftButtonUp">
@@ -50,41 +50,42 @@
             </materialDesign:DrawerHost.LeftDrawerContent>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="25*"/>
-                    <RowDefinition Height="245*"/>
+                    <RowDefinition Height="25*" />
+                    <RowDefinition Height="245*" />
                 </Grid.RowDefinitions>
                 <!--status bar-->
                 <materialDesign:ColorZone
-                    materialDesign:ShadowAssist.ShadowDepth="Depth1" 
-                    Grid.Row="0" Grid.ColumnSpan="2" 
+                    materialDesign:ShadowAssist.ShadowDepth="Depth1"
+                    Grid.Row="0" Grid.ColumnSpan="2"
                     VerticalAlignment="Stretch"
                     Background="{StaticResource PrimaryHueMidBrush}">
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="8*"/>
-                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="8*" />
+                            <ColumnDefinition Width="1*" />
                         </Grid.ColumnDefinitions>
-                        <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" 
-                                    Grid.Column="0"
-                                    IsChecked="False"
-                                    x:Name="MenuToggleButton"
-                                    VerticalAlignment="Center"
-                                    HorizontalAlignment="Center"
-                                    Foreground="{StaticResource PrimaryHueDarkForegroundBrush}"/>
-                        <TextBlock Text="{Binding ElementName=MenuItemListBox, Path=SelectedItem.(local:MenuItem.Name)}"
-                               x:Name="ContentTitle"
-                               Grid.Column="1"
-                               VerticalAlignment="Center"  
-                               HorizontalAlignment="Center"
-                               FontSize="18" 
-                               FontWeight="Medium"
-                               Foreground="{StaticResource PrimaryHueDarkForegroundBrush}"/>
+                        <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}"
+                                      Grid.Column="0"
+                                      IsChecked="False"
+                                      x:Name="MenuToggleButton"
+                                      VerticalAlignment="Center"
+                                      HorizontalAlignment="Center"
+                                      Foreground="{StaticResource PrimaryHueDarkForegroundBrush}" />
+                        <TextBlock
+                            Text="{Binding ElementName=MenuItemListBox, Path=SelectedItem.(local:MenuItem.Name)}"
+                            Grid.Column="1"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            FontSize="18"
+                            FontWeight="Medium"
+                            Foreground="{StaticResource PrimaryHueDarkForegroundBrush}" />
                     </Grid>
                 </materialDesign:ColorZone>
                 <!--content here!-->
-                <ContentControl Grid.Row="1" Content="{Binding ElementName=MenuItemListBox, Path=SelectedItem.(local:MenuItem.Content)}"/>
-            </Grid> 
+                <ContentControl Grid.Row="1"
+                                Content="{Binding ElementName=MenuItemListBox, Path=SelectedItem.(local:MenuItem.Content)}" />
+            </Grid>
         </materialDesign:DrawerHost>
     </materialDesign:DialogHost>
 </Window>
