--- a/HelpdeskKit/Dialogs/InputDialog.xaml
+++ b/HelpdeskKit/Dialogs/InputDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HelpdeskKit.Dialogs.InputDialog"
+﻿<UserControl x:Class="HelpdeskKit.Dialogs.InputDialog"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,25 +6,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HelpdeskKit.Dialogs"
         mc:Ignorable="d"
-        Height="126.892" Width="294.865"
-        ResizeMode="NoResize"
-        WindowStyle="ToolWindow"
+        Height="100" Width="300"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         Background="{DynamicResource MaterialDesignPaper}"
         TextElement.FontWeight="Normal"
         TextElement.FontSize="13.5"
-        Title="Input"
-        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
-        KeyUp="Window_KeyUp">
+        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
     <StackPanel Orientation="Vertical">
         <TextBox materialDesign:HintAssist.Hint="{Binding InputLabel}"
-                 Width="130" Height="30"
+                 materialDesign:HintAssist.HintOpacity="0.2"
+                 Width="160" Height="30"
                  x:Name="TextBoxInput"
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                  Text="{Binding Input}"
                  Margin="10" />
-        <Button Width="80" Height="30" Click="Button_Click">
-            <TextBlock Text="OK" />
-        </Button>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Margin="10" Padding="0" Width="60" Height="25">
+                <TextBlock Text="OK" />
+            </Button>
+            <Button Margin="10" Padding="0" Width="60" Height="25">
+                <TextBlock Text="Cancel" />
+            </Button>
+        </StackPanel>
+        
     </StackPanel>
-</Window>
+</UserControl>
